# eld

./: .clang-format  .clang-tidy  .licenseignore  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README.md  ROADMAP.md  build-status.db  configure_external_llvm.sh  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/: CMakeLists.txt
docs/DeveloperDocs/: AArch64-Relocations.md  ARM-Relocations.md  Hexagon-Relocations.md  IFunc.md
docs/DeveloperDocs/AArch64/: IFunc.md
docs/design/: CMakeLists.txt  conf.py  index.md  index.rst
docs/design/documentation/: MemoryAreaRegionFragment.md  addingCommandLineOptions.rst  fragmentSectionSymbolModel.rst  mergingSimilarStrings.md
docs/multiversion/: CMakeLists.txt  assemble_site.py  build_docs.py
docs/multiversion/templates/: version_link.html  versions.html
docs/userguide/: CMakeLists.txt  GenerateOptionsDocsFromTblGen.py  GenerateTypstPDF.py  conf.py.in  index.md  index.rst  pdf_styles.json  pdf_stylesheet.yaml  requirements.txt  sphinxext_d2.py
docs/userguide/CommandLineOptionsSupplements/: remap-inputs-file.md.in  remap-inputs-file.rst.in  remap-inputs.md.in  remap-inputs.rst.in  sysroot.md.in  sysroot.rst.in
docs/userguide/_ext/: eld_d2.py
docs/userguide/_static/: d2.css
docs/userguide/api_docs/: CMakeLists.txt  Doxyfile.in
docs/userguide/documentation/: diagnostic_reports.md  diagnostic_reports.rst  editor_support.md  eld_debugging_guide.md  eld_debugging_guide.rst  elf_tools.md  getting_image_details.md  image_structure_and_generation.md  layout.md  layout.rst  linker_diagnostics.md  linker_faq.md  linker_faq.rst  linker_map_files.md  linker_map_files.rst  linker_optimizations.md  linker_overview.md  linker_plugin.rst  linker_plugins_updated.md  linker_script.md  linker_script.rst  linker_support_backward_compatibility.md  linking_modes_supported.md  lto_support.md  release_notes.inc  sframe_support.md  sframe_support.rst  supported_targets.md  target_specific_features.md
etc/vim/test/: .gitignore  CMakeLists.txt  archive-pullin.test  banners.test  check_syntax.py  comments.test  elf-pt-names.test  elf-sht-names.test  expr-lines.test  gc-sections.test  kw-assign-extended.test  kw-data.test  kw-expr-extended.test  kw-group.test  kw-input-extended.test  kw-sectionlist-extended.test  kw-sectype-extended.test  kw-segtype.test  kw-toplevel-extended.test  lit.cfg  lit.site.cfg.in  load-lines.test  ls-assignments.test  ls-block-comments.test  ls-keywords.test  ls-rules.test  ls-strings-braces.test  meta-keys.test  output-sections.test  padding.test  rule-lines.test  script-file.test  symbol-lines.test
include/eld/: CMakeLists.txt
include/eld/BranchIsland/: BranchIsland.h
include/eld/Config/: GeneralOptions.h  LinkerConfig.h  TargetOptions.h
include/eld/Core/: LinkState.h  Linker.h  LinkerScript.h  Module.h
include/eld/Diagnostics/: DiagBackends.inc  DiagCommonKinds.inc  DiagDynamicLink.inc  DiagGOTPLT.inc  DiagLDScript.inc  DiagLayouts.inc  DiagPlugin.inc  DiagReaders.inc  DiagRelocations.inc  DiagSymbolResolutions.inc  DiagSymbolVersioning.inc  DiagTraceFiles.inc  DiagTraceSymbols.inc  DiagVerbose.inc  Diagnostic.h  DiagnosticEngine.h  DiagnosticPrinter.h  MsgHandler.h  PluginDiags.inc
include/eld/Driver/: ARMLinkDriver.h  ARMLinkerOptions.td  CMakeLists.txt  Driver.h  Flavor.h  GnuLdDriver.h  GnuLinkerOptions.td  HexagonLinkDriver.h  RISCVLinkDriver.h  RISCVLinkerOptions.td  TemplateLinkDriver.h  TemplateLinkerOptions.td  x86_64LinkDriver.h  x86_64LinkerOptions.td
include/eld/Fragment/: DynStrFragment.h  DynSymFragment.h  DynamicFragment.h  EhFrameFragment.h  EhFrameHdrFragment.h  Fragment.h  GNUVerDefFragment.h  GNUVerNeedFragment.h  GNUVerSymFragment.h  GOT.h  MergeStringFragment.h  RegionFragmentEx.h  SFrameFragment.h  TargetFragment.h
include/eld/Input/: ArchiveFile.h  BitcodeFile.h  ELFDynObjectFile.h  ELFFileBase.h  ELFObjectFile.h  Input.h  InputAction.h  InputBuilder.h  InputTree.h  JustSymbolsAction.h  ObjectFile.h  SearchDirs.h  ZOption.h
include/eld/LayoutMap/: LayoutInfo.h  TextLayoutPrinter.h
include/eld/Object/: ArchiveMemberReport.h  LibReader.h  ObjectBuilder.h  ObjectLinker.h  OutputSectionEntry.h  RuleContainer.h  ScriptMemoryRegion.h  SectionMap.h
include/eld/Plugin/: PluginActivityLog.h  PluginOp.h
include/eld/PluginAPI/: DWARF.h  DiagnosticBuilder.h  DiagnosticEntry.h  Expected.h  LinkerScript.h  LinkerWrapper.h  PluginADT.h
include/eld/Readers/: ArchiveParser.h  BitcodeReader.h  DynamicELFReader.h  ELFDynObjParser.h  ELFExecObjParser.h  ELFReader.h  ELFReaderBase.h  ELFRelocObjParser.h  ELFSection.h  EhFrameHdrSection.h  EhFrameSection.h  ExecELFReader.h  Relocation.h  SFrameSection.h  Section.h  SymDefReader.h
include/eld/Script/: Assignment.h  EntryCmd.h  Expression.h  ExternCmd.h  GroupCmd.h  IncludeCmd.h  InputCmd.h  InputSectDesc.h  MemoryCmd.h  MemoryDesc.h  NameSpec.h  NoCrossRefsCmd.h  OutputArchCmd.h  OutputCmd.h  OutputFormatCmd.h  OutputSectData.h  OutputSectDesc.h  OverlayDesc.h  PhdrDesc.h  PhdrsCmd.h  Plugin.h  PluginCmd.h  RegionAlias.h  ScopedScriptEvalContext.h  ScriptAction.h  ScriptCommand.h  ScriptFile.h  ScriptSymbol.h  SearchDirCmd.h  SectionsCmd.h  StrToken.h  StringList.h  SymbolContainer.h  VersionScript.h  WildcardPattern.h
include/eld/ScriptParser/: ScriptLexer.h  (+1 more)
lib/Config/: CMakeLists.txt  GeneralOptions.cpp  LinkerConfig.cpp  TargetOptions.cpp
lib/Fragment/: CMakeLists.txt  DynStrFragment.cpp  DynSymFragment.cpp  DynamicFragment.cpp  EhFrameFragment.cpp  EhFrameHdrFragment.cpp  Fragment.cpp  FragmentRef.cpp  GNUHashFragment.cpp  GNUVerDefFragment.cpp  GNUVerNeedFragment.cpp  GNUVerSymFragment.cpp  GOT.cpp  MergeStringFragment.cpp  OutputSectDataFragment.cpp  RegionFragmentEx.cpp  SFrameFragment.cpp  StringFragment.cpp  SysVHashFragment.cpp
lib/Object/: ArchiveMemberReport.cpp  CMakeLists.txt  LibReader.cpp  ObjectBuilder.cpp  ObjectLinker.cpp  OutputSectionEntry.cpp  RuleContainer.cpp  ScriptMemoryRegion.cpp  SectionMap.cpp
test/Common/: CMakeLists.txt
tools/eld/: CMakeLists.txt  eld.cpp
(+2496 files in other folders)
